<resources>
    <string name="app_name">EasyERP</string>
    <string name="powered_by">Powered By</string>
    <string name="libraries">Libraries</string>
    <string name="no_data">No data</string>
    <string name="hint_username">Username</string>
    <string name="hint_username_or_email">Username or Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_old">Old password</string>
    <string name="hint_password_new">New password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_continue">Continue</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_remove_all">Clear Filters</string>
    <string name="menu_logout">Logout</string>
    <string name="list_is_empty">The list is empty.\nPlease try again later.</string>
    <string name="try_again">Try again</string>
    <string name="err_not_specified">Not specified</string>
    <string name="err_login_required">Login is required</string>
    <string name="err_f_name_required">First Name is required</string>
    <string name="err_l_name_required">Last Name is required</string>
    <string name="err_email_required">Email is required</string>
    <string name="err_phone_required">Phone is required</string>
    <string name="err_company_name_required">Companu name is required</string>
    <string name="err_site_required">Company website is required</string>
    <string name="err_invalid_phone">Phone is invalid</string>
    <string name="err_invalid_site">Company website is invalid</string>
    <string name="err_password_required">Password is required</string>
    <string name="err_password_old_required">Old password is required</string>
    <string name="err_password_new_required">New password is required</string>
    <string name="err_password_confirm_required">Confirm password is required</string>
    <string name="err_password_confirm_equal">Passwords do not match</string>
    <string name="err_password_wrong_symbols">Only A–Z, a–z, 0–9, _ @ symbols allowed</string>
    <string name="err_password_weak">Weak password. Password should be 8 symbols minimum and contain at least 1 upper case letter, 1 lower case letter, 1 digit and one special symbol</string>
    <string name="err_password_short">Should be at least 8 characters long</string>
    <string name="err_email_wrong">Incorrect entered email</string>
    <string name="err_login_or_email_required">Username or Email is required</string>
    <string name="date_filter">Date filter</string>
    <string name="year_picker">Year picker</string>
    <string name="this_month">This Month</string>
    <string name="this_financial_year">This Financial Year</string>
    <string name="last_month">Last Month</string>
    <string name="last_quarter">Last Quarter</string>
    <string name="last_financial_year">Last Financial Year</string>
    <string name="custom_dates">Custom Dates</string>
    <string name="allocated">Allocated</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="shipped">Shipped</string>
    <string name="total_count">Total Count</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="about">About</string>
    <string name="contacts">Contacts</string>
    <string name="current_status">Current Status</string>
    <string name="close_date">Close Date</string>
    <string name="assigned_to">Assigned to</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="priority">Priority</string>
    <string name="source">Source</string>
    <string name="contact_person">Contact Person</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="job_position">Job Position</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="skype">Skype</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="linkedin">LinkedIn</string>
    <string name="gplus">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="company">Company</string>
    <string name="company_name">Company name</string>
    <string name="company_website">Company website</string>
    <string name="name">Name</string>
    <string name="street">Street</string>
    <string name="hint_city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="country">Country</string>
    <string name="tags">Tags</string>
    <string name="attachments">Attachments</string>
    <string name="no_attachments">No attachments</string>
    <string name="notes_amp_timeline"><![CDATA[Notes & Timeline]]></string>
    <string name="list_searchview_hint">Search</string>
    <string name="dialog_btn_close">Close</string>
    <string name="dialog_btn_apply">Apply</string>
    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_today">Today</string>
    <string name="dialog_btn_remove">Remove</string>
    <string name="dialog_btn_remove_all">Clear Filters</string>
    <string name="dialog_btn_send">Send</string>
    <string name="dialog_btn_change">Change</string>
    <string name="amount">Amount</string>
    <string name="contact">Contact</string>
    <string name="mobile">Mobile</string>
    <string name="full_name">Full Name</string>
    <string name="reference">Reference</string>
    <string name="sales_team">Sales Team</string>
    <string name="sales_person">Sales Person</string>
    <string name="implemented_by">Implemented By</string>
    <string name="language">Language</string>
    <string name="general_information">General Information</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="sales_amp_purchases"><![CDATA[Sales & Purchases]]></string>
    <string name="contractor_type">Contractor type:</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="leads_amp_opportunities"><![CDATA[Leads & Opportunities]]></string>
    <string name="item_product_number">#</string>
    <string name="item_product_sku">SKU</string>
    <string name="item_product_info">Info</string>
    <string name="item_product_qty">Qty</string>
    <string name="item_product_unit_price">Unit Price</string>
    <string name="item_product_taxes">Taxes</string>
    <string name="item_product_amount">Amount</string>
    <string name="order_details_order">Order</string>
    <string name="order_details_bill_to">Bill to</string>
    <string name="order_details_expected_date">Expected Date :</string>
    <string name="order_details_order_date">Order Date :</string>
    <string name="order_details_sub_total">Sub Total</string>
    <string name="order_details_discount">Discount</string>
    <string name="order_details_taxes">Taxes</string>
    <string name="order_details_total">Total</string>
    <string name="order_details_prepaid">Prepaid</string>
    <string name="order_details_other_information">Other information</string>
    <string name="order_details_message">Dear Customer, be informed that total amount for services do not include bank fee.Please pay attention for it when you make your payment</string>
    <string name="order_details_payment_details">Payment details</string>
    <string name="order_details_name_of_beneficiary">Name of Beneficiary</string>
    <string name="order_details_bank">Bank</string>
    <string name="order_details_bank_address">Bank address</string>
    <string name="order_details_iban">IBAN</string>
    <string name="order_details_swift_code">SWIFT code</string>
    <string name="order_details_advice">Payment should be made by bank transfer or check made payable to TEST.</string>
    <string name="invoice_details_balance_due">Balance Due</string>
    <string name="invoice_details_payment_made">Payment Made</string>
    <string name="invoice_details_order_number">Order Number:</string>
    <string name="invoice_details_due_date">Due Date:</string>
    <string name="invoice_details_invoice">Invoice</string>
    <string name="Invoice_details_invoice_date">Invoice Date:</string>
    <string name="payment_details_payment_date">Payment Date:</string>
    <string name="payment_details_bank_account">Bank Account:</string>
    <string name="payment_details_account">Account:</string>
    <string name="payment_details_type">Type</string>
    <string name="payment_details_table_account">Account</string>
    <string name="pattern_payment_date">Payment Date: %s</string>
    <string name="pattern_invoiced_date">Invoiced Date: %s</string>
    <string name="pattern_last_edited" formatted="false">Last Edited: %s at %s</string>
    <string name="pattern_order_date">Order Date: %s</string>
    <string name="pattern_received_date" formatted="false">Received Date: %s at %s</string>
    <string name="pattern_created">Created: %s</string>
    <string name="pattern_created_date" formatted="false">Created Date: %s at %s</string>
    <string name="pattern_gallery_indicator" formatted="false">%d/%d</string>
    <string name="pattern_created_by" formatted="false">Created: %s by %s</string>
    <string name="profile">Profile:</string>
    <string name="last_access">Last Access:</string>
    <string name="order_details_title_order_preview">Order Preview</string>
    <string name="invoice_details_subtitle_payments">Payments</string>
    <string name="invoice_details_subtitle_invoice_preview">Invoice Preview</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions_privacy_policy">By signing in you agree to the Terms &amp; Conditions and Privacy Policy</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="error_connection">No connection. Make sure your internet connection established</string>
    <string name="error_unknown">Something went wrong</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_1"><b>Keep</b> your finger on the pulse\nof sales in your company</string>
    <string name="warehouse">Warehouse</string>
    <string name="favorite_short">Fav.</string>
    <string name="edited_by">Edited By</string>
    <string name="type">Type</string>
    <string name="date_range">Date Range</string>
    <string name="access">Access</string>
    <string name="description_short">Descr.</string>
    <string name="magento_channel_details">Magento channel details</string>
    <string name="etsy_channel_details">Etsy channel details</string>
    <string name="for_import_from_magento_use">For import from Magento use</string>
    <string name="for_import_from_etsy_use">For import from Etsy use</string>
    <string name="channel_name">Channel Name</string>
    <string name="base_url">Base URL</string>
    <string name="user_name">User Name</string>
    <string name="api_password">API Password</string>
    <string name="shop_name">Shop Name</string>
    <string name="keystring">Keystring</string>
    <string name="shared_secret">Shared Secret</string>
    <string name="update_shipping_status_on_etsy">Update shipping status on Etsy</string>
    <string name="update_shipping_method_on_etsy">Update shipping method on Etsy</string>
    <string name="location">Location</string>
    <string name="price_list">Price List</string>
</resources>