<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filterDateForCharts_MCDD"
        android:icon="@drawable/ic_calendar"
        android:title="@string/date_filter"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/thisMonth_MCDD"
                    android:title="@string/this_month" />
                <item
                    android:id="@+id/thisFinancialYear_MCDD"
                    android:title="@string/this_financial_year" />
                <item
                    android:id="@+id/lastMonth_MCDD"
                    android:title="@string/last_month" />
                <item
                    android:id="@+id/lastQuarter_MCDD"
                    android:title="@string/last_quarter" />
                <item
                    android:id="@+id/lastFinancialYear_MCDD"
                    android:title="@string/last_financial_year" />
                <item
                    android:id="@+id/customDates_MCDD"
                    android:title="@string/custom_dates" />
            </group>

        </menu>
    </item>


</menu>