<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@android:color/white"
    android:orientation="horizontal">

    <TextView
        style="@style/ReportsTableHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/favorite_short" />

    <TextView
        style="@style/ReportsTableHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:text="@string/name" />

    <TextView
        style="@style/ReportsTableHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/edited_by" />

    <TextView
        style="@style/ReportsTableHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/type" />

    <TextView
        style="@style/ReportsTableHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/date_range" />

    <TextView
        style="@style/ReportsTableHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/access" />

    <TextView
        style="@style/ReportsTableHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/description_short" />

</LinearLayout>