<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/default_padding"
    android:layout_marginStart="@dimen/default_padding"
    android:layout_marginTop="@dimen/default_padding_big"
    android:background="@color/color_bg__header_table_product"
    android:gravity="center_vertical">


    <TextView
        style="@style/PdfStyle.TableStyle.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_product_number" />

    <TextView
        style="@style/PdfStyle.TableStyle.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_product_sku" />

    <TextView
        style="@style/PdfStyle.TableStyle.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_product_info" />

    <TextView
        style="@style/PdfStyle.TableStyle.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/item_product_qty" />

    <TextView
        style="@style/PdfStyle.TableStyle.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        android:text="@string/item_product_unit_price" />

    <TextView
        style="@style/PdfStyle.TableStyle.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="center_vertical|end"
        android:text="@string/item_product_taxes" />

    <TextView
        style="@style/PdfStyle.TableStyle.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        android:text="@string/item_product_amount" />

</LinearLayout>