<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical">


    <TextView
        android:id="@+id/tvNumber_LIOP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextTableProductStyle"
        android:text="#" />

    <TextView
        android:id="@+id/tvSku_LIOP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextTableProductStyle"
        android:text="@string/item_product_sku" />

    <TextView
        android:id="@+id/tvInfo_LIOP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextTableProductStyle"
        android:text="@string/item_product_info" />

    <TextView
        android:id="@+id/tvQty_LIOP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        style="@style/TextTableProductStyle"
        android:text="@string/item_product_qty" />

    <TextView
        android:id="@+id/tvUnitPrice_LIOP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        style="@style/TextTableProductStyle"
        android:text="@string/item_product_unit_price" />

    <TextView
        android:id="@+id/tvTaxes_LIOP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="center_vertical|end"
        style="@style/TextTableProductStyle"
        android:text="@string/item_product_taxes" />

    <TextView
        android:id="@+id/tvAmount_LIOP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        style="@style/TextTableProductStyle"
        android:text="@string/item_product_amount" />

</LinearLayout>