<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSearch"
        android:title="@string/list_searchview_hint"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_search_white"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/menuFilters"
        android:icon="@drawable/ic_filter_white"
        android:visible="false"
        android:title="@string/menu_filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuFilterRemoveAll"
                android:checkable="false"
                android:orderInCategory="1000"
                android:title="@string/menu_filter_remove_all" />
        </menu>
    </item>
</menu>