<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/view_include_channel_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding">

            <TextView
                style="@style/TextContentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/magento_channel_details" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    style="@style/DefaultTheme.LeadTextInputLayoutStyle"
                    android:layout_marginEnd="@dimen/default_padding_half"
                    android:hint="@string/channel_name">

                    <EditText
                        android:id="@+id/etChannelName_FCMD"
                        style="@style/DefaultTheme.LeadInputFieldStyle"
                        android:text="@string/err_not_specified" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/DefaultTheme.LeadTextInputLayoutStyle"
                    android:layout_marginStart="@dimen/default_padding_half"
                    android:hint="@string/base_url">

                    <EditText
                        android:id="@+id/etBaseUrl_FCMD"
                        style="@style/DefaultTheme.LeadInputFieldStyle"
                        android:inputType="textUri"
                        android:text="@string/err_not_specified" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    style="@style/DefaultTheme.LeadTextInputLayoutStyle"
                    android:layout_marginEnd="@dimen/default_padding_half"
                    android:hint="@string/user_name">

                    <EditText
                        android:id="@+id/etUserName_FCMD"
                        style="@style/DefaultTheme.LeadInputFieldStyle"
                        android:text="@string/err_not_specified" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/DefaultTheme.LeadTextInputLayoutStyle"
                    android:layout_marginStart="@dimen/default_padding_half"
                    android:hint="@string/api_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/selector_color_password_toggle">

                    <EditText
                        android:id="@+id/etApiPassword_FCMD"
                        style="@style/DefaultTheme.LeadInputFieldStyle"
                        android:inputType="textPassword"
                        android:text="@string/err_not_specified" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                style="@style/TextContentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_import_from_magento_use" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    style="@style/DefaultTheme.LeadTextInputLayoutStyle"
                    android:layout_marginEnd="@dimen/default_padding_half"
                    android:hint="@string/warehouse">

                    <EditText
                        android:id="@+id/etWarehouse_FCMD"
                        style="@style/DefaultTheme.LeadInputFieldStyle"
                        android:text="@string/err_not_specified" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/DefaultTheme.LeadTextInputLayoutStyle"
                    android:layout_marginStart="@dimen/default_padding_half"
                    android:hint="@string/location">

                    <EditText
                        android:id="@+id/etLocation_FCMD"
                        style="@style/DefaultTheme.LeadInputFieldStyle"
                        android:inputType="textUri"
                        android:text="@string/err_not_specified" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    style="@style/DefaultTheme.LeadTextInputLayoutStyle"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:hint="@string/price_list">

                    <EditText
                        android:id="@+id/etPriceList_FCMD"
                        style="@style/DefaultTheme.LeadInputFieldStyle"
                        android:text="@string/err_not_specified" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
